--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eslint-plugin-prettier": "^5.5.3",
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
+    "prettier-plugin-jinja-template": "^2.1.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0"
   },
