--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@11ty/eleventy": "^3.1.2",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.1",
     "@eslint/js": "^9.31.0",
     "cross-env": "^10.0.0",
     "eslint": "^9.31.0",
